<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.proyectotic.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_entretenimiento"
            app:destination="@id/entretenimiento" />
        <action
            android:id="@+id/action_navigation_home_to_aseo"
            app:destination="@id/aseo" />
        <action
            android:id="@+id/action_navigation_home_to_cocinar"
            app:destination="@id/cocinar" />
        <action
            android:id="@+id/action_navigation_home_to_musica"
            app:destination="@id/musica" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.proyectotic.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.proyectotic.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/entretenimiento"
        android:name="com.example.proyectotic.Entretenimiento"
        android:label="fragment_entretenimiento"
        tools:layout="@layout/fragment_entretenimiento" />
    <fragment
        android:id="@+id/aseo"
        android:name="com.example.proyectotic.Aseo"
        android:label="fragment_aseo"
        tools:layout="@layout/fragment_aseo" />
    <fragment
        android:id="@+id/cocinar"
        android:name="com.example.proyectotic.Cocinar"
        android:label="fragment_cocinar"
        tools:layout="@layout/fragment_cocinar" />
    <fragment
        android:id="@+id/musica"
        android:name="com.example.proyectotic.Musica"
        android:label="fragment_musica"
        tools:layout="@layout/fragment_musica" />
</navigation>