<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc_horas"
    tools:context=".Entretenimiento">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="620dp"
        android:text="@string/ent_horas"
        android:textAppearance="@style/Energy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="346dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="4dp"
        android:text="¡Descubre cuándo es el momento perfecto para divertirte en armonía con la naturaleza!"
        android:textAppearance="@style/Textos"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_continuar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/design_btn"
        android:text="@string/Continuar"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="347dp"
        android:layout_height="470dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bc_pagina_blanca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="291dp"
            android:layout_height="52dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:hint="@string/games"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:boxStrokeColor="@color/Azul_boton_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <AutoCompleteTextView
                android:id="@+id/games_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none">
            </AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="291dp"
            android:layout_height="52dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="28dp"
            android:hint="Proyeccion de Series"
            app:boxStrokeColor="@color/Azul_boton_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/series"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="291dp"
            android:layout_height="52dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="28dp"
            android:hint="Paginas de Streaming"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:boxStrokeColor="@color/Azul_boton_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <AutoCompleteTextView
                android:id="@+id/streaming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none">
            </AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="291dp"
            android:layout_height="52dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="28dp"
            android:hint="Lectura en linea"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:boxStrokeColor="@color/Azul_boton_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <AutoCompleteTextView
                android:id="@+id/lectura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none">
            </AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="291dp"
            android:layout_height="52dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="330dp"
            android:layout_marginEnd="28dp"
            android:hint="Edicion de video"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:boxStrokeColor="@color/Azul_boton_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <AutoCompleteTextView
                android:id="@+id/edicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none">
            </AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>